Fixed wrapping of images in tables (info image replaced by dotted underline).

--- a/sw/shongo/client-web/src/main/resources/css/application.css
+++ b/sw/shongo/client-web/src/main/resources/css/application.css
@@ -274,6 +274,9 @@ div.bordered table {
     display: inline-block;
     cursor: default;
 }
+.tooltip-label.dotted {
+    border-bottom: 1px dotted;
+}
 .tooltip-content {
     position: absolute;
     display: none;
